openvidu-call-react/src/components/VideoRoomComponent.css
#header {
  color: #ffffff;
  background-color: #333333;
  padding: 0 14px 0 0;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 999999;
  min-width: 400px !important;
}

.toolbar{
  min-height: 40px !important;

}

#titleContent{
  max-width: 100px;
  background-color: #494949;
  margin: 5px -18px;
  padding: 0px 15px;
  font-size: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.buttonsContent{
	height: 40px !important;
	text-align: center;
	margin: auto;
    min-width: 400px;
}
.navButton{
	height: 40px !important;
	width : 40px !important;
}

#navChatButton{
  position: absolute;
  right: 0;
}
.stream-container {
    padding: 0;
}


.bounds {
  background-color: #494949;
  overflow: hidden;
  position: absolute;
  left: 0;
  right: 0;
  top: 40px;
  bottom: 0;
  height: inherit;
  min-width: 400px !important;
  width: inherit;
}


/*!
 * Copyright (c) 2017 TokBox, Inc.
 * Released under the MIT license
 * http://opensource.org/licenses/MIT
 */

 .custom-class {
  min-height: 0px !important;
}

/**
 * OT Base styles
 */

/* Root OT object, this is where our CSS reset happens */
.OT_root,
.OT_root * {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font-family: Arial, Helvetica, sans-serif;
  vertical-align: baseline;
}

.OT_dialog-centering {
  display: table;
  width: 100%;
  height: 100%;
}

.OT_dialog-centering-child {
  display: table-cell;
  vertical-align: middle;
}

.OT_dialog {
  position: relative;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  margin-right: auto;
  margin-left: auto;

  color: #fff;
  font-family: 'Didact Gothic', sans-serif;
  font-size: 13px;
  line-height: 1.4;
}

.OT_dialog * {
  font-family: inherit;
  -webkit-box-sizing: inherit;
  box-sizing: inherit;
}

.OT_closeButton {
  color: #999999;
  cursor: pointer;
  font-size: 32px;
  line-height: 36px;
  position: absolute;
  right: 18px;
  top: 0;
}

.OT_dialog-messages {
  text-align: center;
}

.OT_dialog-messages-main {
  margin-bottom: 36px;
  line-height: 36px;

  font-weight: 300;
  font-size: 24px;
}

.OT_dialog-messages-minor {
  margin-bottom: 18px;

  font-size: 13px;
  line-height: 18px;
  color: #a4a4a4;
}

.OT_dialog-messages-minor strong {
  color: #ffffff;
}

.OT_dialog-actions-card {
  display: inline-block;
}

.OT_dialog-button-title {
  margin-bottom: 18px;
  line-height: 18px;

  font-weight: 300;
  text-align: center;
  font-size: 14px;
  color: #999999;
}
.OT_dialog-button-title label {
  color: #999999;
}

.OT_dialog-button-title a,
.OT_dialog-button-title a:link,
.OT_dialog-button-title a:active {
  color: #02a1de;
}

.OT_dialog-button-title strong {
  color: #ffffff;
  font-weight: 100;
  display: block;
}

.OT_dialog-button {
  display: inline-block;

  margin-bottom: 18px;
  padding: 0 1em;

  background-color: #1ca3dc;
  text-align: center;
  cursor: pointer;
}

.OT_dialog-button:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.OT_dialog-button-large {
  line-height: 36px;
  padding-top: 9px;
  padding-bottom: 9px;

  font-weight: 100;
  font-size: 24px;
}

.OT_dialog-button-small {
  line-height: 18px;
  padding-top: 9px;
  padding-bottom: 9px;

  background-color: #444444;
  color: #999999;
  font-size: 16px;
}

.OT_dialog-progress-bar {
  display: inline-block; /* prevents margin collapse */
  width: 100%;
  margin-top: 5px;
  margin-bottom: 41px;

  border: 1px solid #4e4e4e;
  height: 8px;
}

.OT_dialog-progress-bar-fill {
  height: 100%;

  background-color: #29a4da;
}

.OT_dialog-plugin-upgrading .OT_dialog-plugin-upgrade-percentage {
  line-height: 54px;

  font-size: 48px;
  font-weight: 100;
}

/* Helpers */

.OT_centered {
  position: fixed;
  left: 50%;
  top: 50%;
  margin: 0;
}

.OT_dialog-hidden {
  display: none;
}

.OT_dialog-button-block {
  display: block;
}

.OT_dialog-no-natural-margin {
  margin-bottom: 0;
}

/* Publisher and Subscriber styles */

.OT_publisher,
.OT_subscriber {
  position: relative;
  min-width: 48px;
	min-height: 48px;
	width: 100%;
	height: 100%;
}

.OT_publisher .OT_video-element,
.OT_subscriber .OT_video-element {
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;

  -webkit-transform-origin: 0 0;

  transform-origin: 0 0;
}

/* Styles that are applied when the video element should be mirrored */
.OT_publisher.OT_mirrored .OT_video-element {
  -webkit-transform: scale(-1, 1);
  transform: scale(-1, 1);
  -webkit-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.OT_subscriber_error {
  background-color: #000;
  color: #fff;
  text-align: center;
}

.OT_subscriber_error > p {
  padding: 20px;
}

/* The publisher/subscriber name/mute background */
.OT_publisher .OT_bar,
.OT_subscriber .OT_bar,
.OT_publisher .OT_name,
.OT_subscriber .OT_name,
.OT_publisher .OT_archiving,
.OT_subscriber .OT_archiving,
.OT_publisher .OT_archiving-status,
.OT_subscriber .OT_archiving-status,
.OT_publisher .OT_archiving-light-box,
.OT_subscriber .OT_archiving-light-box {
  -webkit-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
  top: 0;
  left: 0;
  right: 0;
  display: block;
  height: 34px;
  position: absolute;
}

.OT_publisher .OT_bar,
.OT_subscriber .OT_bar {
  background: rgba(0, 0, 0, 0.4);
}

.OT_publisher .OT_edge-bar-item,
.OT_subscriber .OT_edge-bar-item {
  z-index: 1; /* required to get audio level meter underneath */
}

/* The publisher/subscriber name panel/archiving status bar */
.OT_publisher .OT_name,
.OT_subscriber .OT_name {
  background-color: transparent;
  color: #ffffff;
  font-size: 15px;
  line-height: 34px;
  font-weight: normal;
  padding: 0 4px 0 36px;
}

.OT_publisher .OT_archiving-status,
.OT_subscriber .OT_archiving-status {
  background: rgba(0, 0, 0, 0.4);
  top: auto;
  bottom: 0;
  left: 34px;
  padding: 0 4px;
  color: rgba(255, 255, 255, 0.8);
  font-size: 15px;
  line-height: 34px;
  font-weight: normal;
}
/* ... */

